--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,15 @@
 
 body {
   background-color: #0f0f0f;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+    "FILL" 0,
+    "wght" 200,
+    "GRAD" 0,
+    "opsz" 24;
 }
