--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  transition: all 150ms ease-out;
+}
+
 body {
   background-color: #0f0f0f;
   font-family: "Roboto", sans-serif;
